fixed where the page jumps to

--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -21,6 +21,6 @@
 
 h3{
   font-style: italic;
-  margin-top: 275px;
-  margin-bottom: 275px;
+  padding-top: 305px;
+  padding-bottom: 305px;
 }
